# website

./: 404.html  CNAME  LICENSE  README.md  index.html  mkdocs.yml  properdocs.yml  pyproject.toml  robots.txt  sitemap.xml
.github/workflows/: ci.yml  publish.yml
browser/: index.html
coding-style/: index.html
communication/: index.html
diff/: index.html
docs/: ads.txt  coding-style.md  communication.md  index.md  maintainers.md  other.md  release-process.md  source-code.md  translations.md
docs/stylesheets/: extra.css
downloads/: index.html
maintainers/: index.html
milestone/: index.html
other/: index.html
overrides/: main.html
overrides/partials/: copyright.html
release-process/: index.html
report/: index.html
search/: search_index.json
source-code/: index.html
stylesheets/: extra.css
ticket/1/: index.html
ticket/10/: index.html
ticket/11/: index.html
ticket/112/: index.html
ticket/113/: index.html
ticket/114/: index.html
ticket/115/: index.html
ticket/116/: index.html
ticket/117/: index.html
ticket/118/: index.html
ticket/119/: index.html
ticket/12/: index.html
ticket/120/: index.html
ticket/121/: index.html
ticket/122/: index.html
ticket/123/: index.html
ticket/125/: index.html
ticket/126/: index.html
ticket/127/: index.html
ticket/128/: index.html
ticket/129/: index.html
ticket/13/: index.html
ticket/130/: index.html
ticket/132/: index.html
ticket/133/: index.html
ticket/134/: index.html
ticket/135/: index.html
ticket/1364/: index.html
translations/: index.html
(+3373 files in other folders)
